--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eject": "react-scripts eject",
     "server": "json-server -p3001 db.json"
   },
+  "proxy": "http://localhost:3002",
   "eslintConfig": {
     "extends": "react-app"
   },
